--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@storybook/addon-docs": "^9.1.10",
+    "@storybook/html-vite": "^9.1.10",
+    "storybook": "^9.1.10",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
