--- a/packages/hintorium/package.json
+++ b/packages/hintorium/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "hintorum",
-  "private": true,
-  "version": "0.0.0",
+  "name": "hintorium-core",
+  "version": "1.1.0",
   "type": "module",
+  "main": "dist/hintorium.umd.js",
+  "module": "dist/hintorium.es.js",
+  "types": "dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -13,6 +17,7 @@
   "devDependencies": {
     "@storybook/addon-docs": "^9.1.10",
     "@storybook/html-vite": "^9.1.10",
+    "@types/node": "^24.10.0",
     "storybook": "^9.1.10",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
