--- a/packages/hintorium/package.json
+++ b/packages/hintorium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hintorium-core",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "main": "dist/hintorium.umd.js",
   "module": "dist/hintorium.es.js",
@@ -21,5 +21,8 @@
     "storybook": "^9.1.10",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "marked": "^16.4.1"
   }
 }
