--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "hintorium-core": "^2.0.1",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   }
