fix: workspace hintorium-react

--- a/packages/hintorium-react/package.json
+++ b/packages/hintorium-react/package.json
@@ -35,7 +35,7 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "hintorium-core": "workspace:*"
+    "hintorium-core": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
