fix: update dependencies and build config for hintorium-react

--- a/packages/hintorium/package.json
+++ b/packages/hintorium/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hintorium-core",
-  "version": "1.8.0",
+  "version": "1.8.1",
   "type": "module",
   "module": "dist/hintorium.es.js",
   "types": "dist/types/index.d.ts",
@@ -12,7 +12,8 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/hintorium.es.js"
+      "import": "./dist/hintorium.es.js",
+      "types": "./dist/types/index.d.ts"
     },
     "./style.css": "./dist/hintorium-core.css"
   },
