Fix builds of hintorium-core & hintorium-react.
* fix: turbo build, package version

* fix: package core readme, build config

* fix: hintorium-react readme

* feat: docs readme

* feat: build with custom css setup build

* fix: update dependencies and build config for hintorium-react

* fix: docs style import

--- a/packages/hintorium/package.json
+++ b/packages/hintorium/package.json
@@ -1,13 +1,22 @@
 {
   "name": "hintorium-core",
-  "version": "1.7.0",
+  "version": "1.8.1",
   "type": "module",
-  "main": "dist/hintorium.umd.js",
   "module": "dist/hintorium.es.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
+  "sideEffects": [
+    "*.css"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/hintorium.es.js",
+      "types": "./dist/types/index.d.ts"
+    },
+    "./style.css": "./dist/hintorium-core.css"
+  },
   "scripts": {
     "build": "vite build && tsc",
     "preview": "vite preview",
